<resources>
    <string name="bottom_menu_income_expense">Income/Expense</string>
    <string name="bottom_menu_chart">Chart</string>
    <string name="bottom_menu_profile">Profile</string>
    <string name="tab_income">Income</string>
    <string name="tab_expense">Expense</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="title_category">Categories</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_sub_category">Category: %1$s</string>
    <string name="title_category_creation">Category</string>
    <string name="title_category_set">Available icons</string>
    <string name="title_category_group_set">Categories</string>
    <string name="title_category_creation_create">Category creation</string>
    <string name="title_prepopulate_currency">Choose currency</string>
    <string name="title_prepopulate_budget">Current budget</string>
    <string name="title_prepopulate_regular_incomes">Regular incomes</string>
    <string name="title_prepopulate_regular_income">Regular income</string>
    <string name="title_prepopulate_regular_expenses">Regular expenses</string>
    <string name="title_prepopulate_regular_expense">Regular expense</string>
    <string name="title_goal">Goals</string>
    <string name="title_settings">Settings</string>
    <string name="title_billing">Subscriptions</string>
    <string name="toolbar_menu_skip">Skip</string>
    <string name="profile_logout">Logout</string>
    <string name="currency_error">Failed to get currency list</string>
    <string name="currency_change_title">Change currency to %s?</string>
    <string name="currency_change_subtitle">The app will restart.</string>
    <string name="default_category_expense_food">Food</string>
    <string name="default_category_expense_cafe">Cafe</string>
    <string name="default_category_expense_products">Products</string>
    <string name="default_category_expense_car">Car</string>
    <string name="default_category_expense_car_fuel">Fuel</string>
    <string name="default_category_expense_car_service">Car service</string>
    <string name="default_category_expense_home">Home</string>
    <string name="default_category_expense_relax">Relax</string>
    <string name="default_category_expense_travels">Travels</string>
    <string name="default_category_expense_internet">Internet</string>
    <string name="default_category_expense_doctor">Doctor</string>
    <string name="default_category_income_salary">Salary</string>
    <string name="default_category_income_business">Business</string>
    <string name="default_category_income_sale">Sale</string>
    <string name="default_category_income_part_time_job">Part-time job</string>
    <string name="income_expense_empty_sum_error">The amount is too small</string>
    <string name="category_all">All\nitems</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="buy">Buy</string>
    <string name="add">Add</string>
    <string name="create">Create</string>
    <string name="transaction_delete_dialog_title">Delete this transaction?</string>
    <string name="transaction_delete_dialog_subtitle">Do you really want to delete the transaction?</string>
    <string name="transaction_edit_sum_title">Amount</string>
    <string name="transaction_edit_description_hint">Description</string>
    <string name="transaction_edit_in_statistics">In statistics</string>
    <string name="transaction_empty_placeholder_expense_title">Add expense</string>
    <string name="transaction_empty_placeholder_regular_expense_title">Add regular expense</string>
    <string name="transaction_empty_placeholder_income_title">Add income</string>
    <string name="transaction_empty_placeholder_regular_income_title">Add regular income</string>
    <string name="transaction_empty_placeholder_subtitle">Enter the amount and tap on a category</string>
    <string name="category_name_title">Category name</string>
    <string name="category_name_hint">Enter name</string>
    <string name="category_unit_to_group_title">Grouping</string>
    <string name="category_add_to_group_title">Add to group</string>
    <string name="category_unit_new_name_subtitle">Enter name of new group</string>
    <string name="category_unit_to_group_subtitle">Add category \"%1$s\"\ to group %2$s?</string>
    <string name="category_unit_name_group_hint">Name of group</string>
    <string name="category_unit_name_exist_error">Name of this group already exists</string>
    <string name="category_expense_info_can_spend_today_title">you can spend today:</string>
    <string name="category_expense_info_can_spend_today_negate_title">overspending:</string>
    <string name="category_expense_info_today_title">was spent today:</string>
    <string name="category_expense_info_period_title">was spent in period:</string>
    <string name="category_income_info_period_title">was earned in period:</string>
    <string name="category_group_housing">Housing</string>
    <string name="category_group_transportation">Transportation</string>
    <string name="category_group_food">Food</string>
    <string name="category_group_utilities">Utilities</string>
    <string name="category_group_insurance">Insurance</string>
    <string name="category_group_medical">Medical &amp; Healthcare</string>
    <string name="category_group_sport">Sport</string>
    <string name="category_group_investing">Investing</string>
    <string name="category_group_recreation">Recreation</string>
    <string name="category_group_clothes">Clothes</string>
    <string name="category_group_personal">Clothes</string>
    <string name="category_group_others">Others</string>
    <string name="category_edit_title">Edit category group</string>
    <string name="category_delete_title">Remove category?</string>
    <string name="category_delete_sub_title">All operations with this category will also be deleted.</string>
    <string name="category_delete_group_sub_title">All subcategories will also be deleted.\n\nAll operations with this category will be deleted too.</string>
    <string name="category_empty_placeholder_title">Category list is empty</string>
    <string name="category_empty_placeholder_subtitle">Add at least one category</string>
    <string name="sub_category_delete_title">Delete subcategory?</string>
    <string name="sub_category_delete_subtitle">All operations with this category will also be deleted.</string>
    <string name="sub_category_delete">Delete</string>
    <string name="sub_category_delete_from_group">Delete from group</string>
    <string name="regular_transaction_notify">Notify</string>
    <string name="regular_transaction_auto_add">Auto add</string>
    <string name="regular_transaction_choose_category">Choose category</string>
    <string name="regular_transaction_repeat_title">Repeat every</string>
    <string name="regular_transaction_repeat_next_date_title">Starts</string>
    <string name="regular_transaction_repeat_monday_short">Mo</string>
    <string name="regular_transaction_repeat_monday">Monday</string>
    <string name="regular_transaction_repeat_tuesday_short">Tu</string>
    <string name="regular_transaction_repeat_tuesday">Tuesday</string>
    <string name="regular_transaction_repeat_wednesday_short">We</string>
    <string name="regular_transaction_repeat_wednesday">Wednesday</string>
    <string name="regular_transaction_repeat_thursday_short">Th</string>
    <string name="regular_transaction_repeat_thursday">Thursday</string>
    <string name="regular_transaction_repeat_friday_short">Fr</string>
    <string name="regular_transaction_repeat_friday">Friday</string>
    <string name="regular_transaction_repeat_saturday_short">Sa</string>
    <string name="regular_transaction_repeat_saturday">Saturday</string>
    <string name="regular_transaction_repeat_sunday_short">Su</string>
    <string name="regular_transaction_repeat_sunday">Sunday</string>
    <string name="regular_transaction_repeat_period_day">every day</string>
    <string name="regular_transaction_repeat_period_week">repeat on: %1$s</string>
    <string name="regular_transaction_repeat_period_month">every month\non %1$sth</string>
    <string name="regular_transaction_repeat_period_month_2">every month on %1$sth</string>
    <string name="regular_transaction_repeat_period_year">every year\n%1$s</string>
    <string-array name="regular_transaction_repeat_list">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
    </string-array>
    <string name="goals_remaining_to_spend">Can be spend in that period</string>
    <string name="goals_empty_placeholder_title">Add goals</string>
    <string name="goals_empty_placeholder_subtitle">Add a goal you want to accumulate</string>
    <string name="goals_target_name_hint">Goal name</string>
    <string name="goals_description_hint">Goal description</string>
    <string name="goals_remove_dialog_title">Delete this goal?</string>
    <string name="goals_remove_dialog_subtitle">Do you really want to delete the goal?</string>
    <string name="goals_sum_title">Price of goal</string>
    <string name="goals_sum_per_period_title">Save every period</string>
    <string name="settings_backup">Make backup</string>
    <string name="settings_backup_info">Last backup: %1$s</string>
    <string name="settings_backup_empty">Backup hasn\'t been created yet</string>
    <string name="settings_backup_succeeded">Backup succeeded</string>
    <string name="settings_backup_error">Backup error</string>
    <string name="settings_backup_network_error">Network error</string>
    <string name="settings_backup_user_error">Unknown user error</string>
    <string name="settings_backup_file_not_found_error">File not found</string>
    <string name="settings_backup_deleted">Backup file was deleted</string>
    <string name="settings_backup_delete_title">Delete backup?</string>
    <string name="settings_start_period_day_title">Start of period:</string>
    <string name="settings_start_period_day_postfix">day of month</string>
    <string name="settings_start_period_day_error">The day should be in interval from 1 to 31</string>
    <string name="settings_subscription_premium_title" translatable="false">Go Premium</string>
    <string name="settings_subscription_premium_acknowledged_title" translatable="false">Premium</string>
    <string name="settings_subscription_premium_acknowledged_subtitle_renewing">Subscription will be renewing automatically</string>
    <string name="settings_subscription_premium_acknowledged_subtitle_cancel">Subscription is cancelled</string>
    <string name="settings_subscription_premium_description">cost control\nextra icons\nregular transactions\nand much more…\n</string>
    <string name="settings_subscription_premium_min_price">from %1$s%2$s %3$s</string>
    <string name="settings_privacy_policy"><a href="https://pages.flycricket.io/moneymanager-0/privacy.html">Privacy Policy</a></string>
    <string name="profile_item_currency_title">Currency: </string>
    <string name="profile_item_budget_title">Budget: </string>
    <string name="profile_item_regular_incomes_title">Regular incomes</string>
    <string name="profile_item_regular_expenses_title">Regular expenses</string>
    <string name="profile_item_goals_title">Goals: %1$s</string>
    <string name="profile_item_goals_title_empty">Goals</string>
    <string name="profile_item_settings_title">Settings</string>
    <string name="profile_item_current_currency_title">current</string>
    <string name="profile_item_main_currency_title">main</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_subtitle">Do you really want to logout?</string>
</resources>