<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="320dp"
    android:minWidth="320dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/remove_dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_large"
        android:paddingTop="16dp"
        android:paddingEnd="@dimen/padding_large"
        tools:text="@string/currency_change_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/remove_dialog_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_large"
        android:paddingTop="16dp"
        android:paddingEnd="@dimen/padding_large"
        android:text="@string/currency_change_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_dialog_title" />

    <TextView
        android:id="@+id/change_button_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/change_button_confirm"
        app:layout_constraintTop_toBottomOf="@+id/remove_dialog_subtitle" />

    <TextView
        android:id="@+id/change_button_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_dialog_subtitle" />
</androidx.constraintlayout.widget.ConstraintLayout>
