<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="280dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/logout_dialog_title"
        style="@style/Theme.MoneyManager.MaterialDialog.Title.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/standard_left_margin"
        android:paddingTop="16dp"
        android:paddingEnd="@dimen/standard_right_margin"
        android:text="@string/logout_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logout_dialog_subtitle"
        style="@style/Theme.MoneyManager.MaterialDialog.Body.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/standard_left_margin"
        android:paddingTop="16dp"
        android:paddingEnd="@dimen/standard_right_margin"
        android:text="@string/logout_dialog_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_dialog_title" />

    <TextView
        android:id="@+id/logout_button_cancel"
        android:layout_width="0dp"
        style="@style/Theme.MoneyManager.MaterialDialog.Button.Text"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/logout_button_confirm"
        app:layout_constraintTop_toBottomOf="@+id/logout_dialog_subtitle" />

    <TextView
        android:id="@+id/logout_button_confirm"
        style="@style/Theme.MoneyManager.MaterialDialog.Button.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:text="@string/exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout_dialog_subtitle" />
</androidx.constraintlayout.widget.ConstraintLayout>
