<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.MoneyManager.Material.Alert.Dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp">

    <TextView
        android:id="@+id/category_dialog_edit_title"
        style="@style/Theme.MoneyManager.MaterialComponents.Title.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingStart="@dimen/standard_left_margin"
        android:paddingTop="16dp"
        android:paddingEnd="@dimen/standard_right_margin"
        android:singleLine="false"
        android:text="@string/category_edit_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_dialog_edit_et_name_layout"
        style="@style/TextInputLayoutAppearance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_left_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/standard_right_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_dialog_edit_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/category_dialog_edit_et_name"
            style="@style/Widget.MoneyManager.EditText.Category.Union"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_unit_name_group_hint"
            android:inputType="text"
            android:maxLength="@integer/max_category_name_length"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/category_edit_button_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:padding="@dimen/standard_padding"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/category_edit_button_confirm"
        app:layout_constraintTop_toBottomOf="@+id/category_dialog_edit_et_name_layout" />

    <TextView
        android:id="@+id/category_edit_button_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:padding="@dimen/standard_padding"
        android:layout_marginEnd="@dimen/standard_right_margin"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_dialog_edit_et_name_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>
