<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.MoneyManager.Material.Alert.Dialog">

    <TextView
        android:id="@+id/triple_remove_dialog_title"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
        android:textColor="@color/secondary_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingStart="@dimen/standard_left_margin"
        android:paddingTop="16dp"
        android:paddingEnd="@dimen/standard_right_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/transaction_delete_dialog_title" />

    <TextView
        android:id="@+id/triple_remove_dialog_subtitle"
        style="@style/MaterialAlertDialog.MaterialComponents.Body.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/standard_left_margin"
        android:paddingTop="16dp"
        android:paddingEnd="@dimen/standard_right_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/triple_remove_dialog_title"
        tools:text="@string/transaction_delete_dialog_subtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/triple_remove_dialog_button_action1"
        style="?buttonBarNegativeButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/triple_remove_dialog_subtitle"
        tools:text="action1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/triple_remove_dialog_button_action2"
        style="?buttonBarPositiveButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/triple_remove_dialog_button_action1"
        tools:text="action2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/triple_remove_dialog_button_cancel"
        style="?buttonBarPositiveButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/triple_remove_dialog_button_action2"
        tools:text="@string/cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>
